--- a/homePage.html
+++ b/homePage.html
@@ -8,8 +8,10 @@
 <body>
 
     <h1>Home Page</h1>
-    <p><a href="">Class Schedule</a></p>
-    <p><a href="">Enrollment</a></p>
+    <p><a href="https://github.com/GeorgeA101/qcfirst/blob/main/Student/studentHome.html">Class Schedule</a></p>
+    <p><a href="qcfirst/Student/enrollmentPage.html">Enrollment</a></p>
+    
+    <p> A bunch of things written in this paragraph. so im sorry in advance for this giberish </p>
 
 </body>
 
