--- a/homePage.html
+++ b/homePage.html
@@ -8,9 +8,14 @@
 <body>
 
     <h1>Home Page</h1>
+    <p><a href="/qcfirst/Deliverable2/signUp.html">Sign Up</a></p>
     <p><a href="https://github.com/GeorgeA101/qcfirst/blob/main/Student/studentHome.html">Class Schedule</a></p>
     <p><a href="qcfirst/Student/enrollmentPage.html">Enrollment</a></p>
-    
+    <p><a href="qcfirst/Deliverable2/Instructor_Side/instructorHome.html">Instructor Home</a></p>
+    <p><a href="qcfirst/Deliverable2/Instructor_Side/createCourse.html">Course Create</a></p>
+    <p><a href="qcfirst/Deliverable2/Instructor_Side/deleteCourse.html">Course Delete</a></p>
+    <p><a href="qcfirst/Deliverable2/Instructor_Side/confirmDelete.html">Confirm Delete</a></p>
+
     <p> A bunch of things written in this paragraph. so im sorry in advance for this giberish </p>
 
 </body>
