Adding backtracking/return to home link

--- a/Deliverable2/Instructor_Side/confirmDelete.html
+++ b/Deliverable2/Instructor_Side/confirmDelete.html
@@ -15,6 +15,7 @@
     &emsp; &emsp; &emsp;     &emsp;   &emsp;
     <button type="submit" class="confirm">Yes</button>
     <button type="submit" class="reject">No</button>
+    <p><a href="../../homePage.html">Return to Home</a></p>
 
 
 </body>
