--- a/Deliverable2/Instructor_Side/createCourse.html
+++ b/Deliverable2/Instructor_Side/createCourse.html
@@ -90,6 +90,7 @@
 
                 <br>
                 <button type="button" class="createBtn">Create Course</button>
+                <p><a href="../../homePage.html">Return to Home</a></p>
 </form>
 </body>
 </html>
