--- a/Deliverable2/Instructor_Side/deleteCourse.html
+++ b/Deliverable2/Instructor_Side/deleteCourse.html
@@ -52,6 +52,7 @@
         <hr>
 
         <button type="submit" class="removeCourseBtn">Remove Selected</button>
+        <p><a href="../../homePage.html">Return to Home</a></p>
     </div>
 </body>
 </html>
