--- a/Deliverable2/Instructor_Side/instructorHome.html
+++ b/Deliverable2/Instructor_Side/instructorHome.html
@@ -44,6 +44,7 @@
     <button type="submit" class="addCourseBtn">Add Course</button>
     <button type="submit" class="removeCourseBtn">Remove Course</button>
 </div>
+   <p><a href="../../homePage.html">Return to Home</a></p>
 </div>
 </body>
 </html>
