--- a/Deliverable2/signUp.html
+++ b/Deliverable2/signUp.html
@@ -45,12 +45,11 @@
                 <input type="checkbox" checked="checked" name="student" style="margin-bottom:15px"> I am a Student
             </label>
 
-
-
             <div class="btns">
                 <button type="button" class="cancelbtn">Cancel</button>
                 <button type="submit" class="signupbtn">Sign Up</button>
             </div>
+            <p><a href="../homePage.html">Return to Home</a></p>
     </div>
 </body>
 </html>
