Correcting link paths

--- a/homePage.html
+++ b/homePage.html
@@ -8,9 +8,11 @@
 <body>
 
     <h1>Home Page</h1>
+    <p><a href="logIn.html">Login</a></p>
     <p><a href="Deliverable2/signUp.html">Sign Up</a></p>
-    <p><a href="https://github.com/GeorgeA101/qcfirst/blob/main/Student/studentHome.html">Class Schedule</a></p>
-    <p><a href="qcfirst/Student/enrollmentPage.html">Enrollment</a></p>
+    <p><a href="Student/studentHome.html">Student Home</a></p>
+    <p><a href="Student/enrollmentPage.html">Student Enrollment</a></p>
+    <p><a href="Student/classListDisplay.html">Student Course Display</a></p>
     <p><a href="Deliverable2/Instructor_Side/instructorHome.html">Instructor Home</a></p>
     <p><a href="Deliverable2/Instructor_Side/createCourse.html">Course Create</a></p>
     <p><a href="Deliverable2/Instructor_Side/deleteCourse.html">Course Delete</a></p>
